--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/small.css" />
 </head>
 <body>
-    
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="left">
+                <p>Folklore Flowers ✣ Door County, Wisconsin ✣</p>
+            </div>
+            <div class="center">
+                <p>Contact Us</p> 
+                <p>+555 013913094</p> 
+                <p>myemail@test.com</p>
+            </div>
+            <div class="right">
+                <p>Follow Us</p>
+                <p>FB</p>
+                <p>TW</p>
+                <p>INS</p>
+                <p>LKD</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            &copy; <span id="currentyear"></span> Website by Group 02
+        </div>       
+    </footer>
+    <script src="js/currentdate.js"></script>
 </body>
 </html>
